tests/NormalTests/paczka1/small_fuzzy/85524349.err
Error in line 2: r73T7OyHA9 S15 12,7
Error in line 13: S961 S15 22,4
Error in line 8: 9kXfmOcC2r S961 95,9
